--- a/Develop/package.json
+++ b/Develop/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git@github.com:Bdoherty1/eCommerceBackendDev.git"
   },
   "keywords": [],
   "author": "",
